# Jurassip

./: .env  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  go.mod  go.sum
cmd/jurassip/: main.go
internal/adapter/: adapter.go  jura_adapter.go
internal/blockchain/: listener.go
internal/uart/: obfuscation.go  uart.go
pkg/logger/: logger.go
proto/: coffee_maker.proto
src/: main.rs  server.rs
src/api/: make_coffee.rs  make_product.rs  mod.rs  product_definitions.rs  switch_machine.rs
src/protocol/: bytes_to_char.rs  char_to_bytes.rs  mod.rs  utils.rs
src/serial/: connect.rs  connection.rs  list_ports.rs  mod.rs  send_command.rs  serial_read.rs  serial_write.rs  stream_input.rs
