[package]
name = "Jurassip"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
serialport = { version = "4.7.1" }
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
prost = "0.11"
tonic-build = "0.13.1"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.9"
